<resources>
    <string name="app_name">Survey</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Survey</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_take_survey">Take Survey</string>
    <string name="title_activity_survey_item_action">Survey</string>
    <string name="title_activity_response_list">Responses</string>
    <string name="title_activity_response_detail">Response</string>
    <string name="title_activity_create_questions">Questions Setup</string>
    <string name="question_prompt">Select Question Type</string>
    <string-array name="question_types">
        <item>TEXT</item>
        <item>SINGLE OPTION</item>
        <item>MULTIPLE OPTIONS</item>
    </string-array>
    <string name="title_activity_survey_action">My Survey</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Enter Survey Name</string>
    <string name="title_activity_table">TableActivity</string>
    <string name="title_activity_bar_chart">BarChartActivity</string>
    <string name="title_activity_survey_report">SurveyReportActivity</string>
    <string name="title_activity_new_survey">New Survey</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="please_log_into_your_account">Please log into your account</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="log_in">Log In</string>
    <string name="or_sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="brand_logo">Brand Logo</string>
    <string name="confirm_password">Confirm password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="hello_there">Hello there!!!</string>
    <string name="enter_your_details_let_s_get_to_know_you">Enter your details. Let’s get to know you</string>
    <string name="feature_image">feature image</string>
    <string name="get_started_with_email">Get started with email</string>
    <string name="variety_of_questions">Variety of question types</string>
    <string name="access_to_polls">Access to polls</string>
    <string name="make_money">Make money</string>
    <string name="verified_surveys">Verified Surveys</string>
    <string name="long_text">But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete. Dodo is not equivalent to plantain because when the pastor comes downstairs, the bungalow will shot down.</string>
    <string name="survey_name">Survey Name</string>
    <string name="survey_description">Survey Description</string>
    <string name="privacy">(Privacy)</string>
    <string name="created">created</string>
    <string name="completed">completed</string>
    <string name="enter_answer">Enter Answer</string>
    <string name="title_activity_questions_setup">QuestionsSetupActivity</string>
    <string name="enter_your_questionr">Enter your question</string>
    <string name="compulsory">Compulsory</string>
    <string name="enter_option">Enter option</string>
    <string name="question_type_image">Question Type Image</string>
    <string name="add_option">Add option</string>
    <string name="add_your_first_question">Add your first question</string>
    <string name="backup_and_sync"><![CDATA[Backup & Sync]]></string>
    <string name="logout">Logout</string>
    <string name="online_search">Online Search</string>
    <string name="my_surveys">My Surveys</string>
    <string name="clear_question">Clear Question</string>
    <string name="title_activity_dashboard2">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="submit">SUBMIT</string>
    <string name="cont">CONTINUE</string>
    <string name="publicc">Public</string>
    <string name="add_a_brief_description">Add a brief description</string>
    <string name="give_your_survey_a_name">Give your survey a name</string>
    <string name="add_picture_logo">Add picture/logo</string>
    <string name="start_creating_surveys">Start creating surveys</string>
    <string name="you_are_yet_to_create_a_survey">You are yet to create a survey.</string>
    <string name="asterisk">\*</string>
</resources>
