<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/login_bg"
    tools:context="com.example.babajidemustapha.survey.features.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="?attr/actionBarSize"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/create"
            style="@style/FormButton"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:onClick="createUser"
            android:text="@string/or_sign_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flow" />


        <Button
            android:id="@+id/skip_login"
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:drawableEnd="@drawable/ic_arrow_forward_color_accent"
            android:drawablePadding="10dp"
            android:text="@string/continue_as_guest"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/google_sign_in" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:contentDescription="@string/brand_logo"
            android:src="@drawable/logo"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/hello_there"
            android:textColor="#001F52"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/enter_your_details_let_s_get_to_know_you"
            android:textColor="@color/app_gray"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome" />

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/or"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/divider1"
            app:layout_constraintEnd_toStartOf="@id/divider2"
            app:layout_constraintStart_toEndOf="@+id/divider1"
            app:layout_constraintTop_toTopOf="@id/divider1" />

        <View
            android:id="@+id/divider1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:background="@color/divider_color"
            app:layout_constraintEnd_toStartOf="@+id/or"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create" />

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/divider_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/or"
            app:layout_constraintTop_toTopOf="@+id/divider1" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            app:constraint_referenced_ids="username_layout,email_layout,phone_number_layout,last_name_layout,first_name_layout,password_layout,confirm_password_layout"
            app:flow_verticalGap="30dp"
            app:flow_verticalStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/or" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_layout"
            android:layout_width="match_parent"
            style="@style/FormTextInputLayout"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp">
        <EditText
            android:id="@+id/cUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/FormEditText"
            android:hint="@string/username"
            android:layout_weight="1"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            style="@style/FormTextInputLayout"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp">
        <EditText
            android:id="@+id/cEmail"
            style="@style/FormEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:layout_weight="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number_layout"
            android:layout_width="match_parent"
            style="@style/FormTextInputLayout"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp">
        <EditText
            android:id="@+id/cPhone"
            style="@style/FormEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_name_layout"
            android:layout_width="match_parent"
            style="@style/FormTextInputLayout"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp">
        <EditText
            android:id="@+id/cSurname"
            style="@style/FormEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_name_layout"
            android:layout_width="match_parent"
            style="@style/FormTextInputLayout"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp">
        <EditText
            android:id="@+id/cFirstName"
            style="@style/FormEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            style="@style/FormTextInputLayout"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp">
        <EditText
            android:id="@+id/cPassword"
            style="@style/FormEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_layout"
            android:layout_width="match_parent"
            style="@style/FormTextInputLayout"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp">
        <EditText
            android:id="@+id/cPassword2"
            style="@style/FormEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
