<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.babajidemustapha.survey.features.LoginActivity">

    <!-- Login progress -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="?attr/actionBarSize"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <Button
                style="@style/TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="signUp"
                android:text="@string/or_sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/logo" />

            <Button
                android:id="@+id/forgot_password"
                style="@style/TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/forgot_password"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordVisible" />

            <Button
                android:id="@+id/sign_in_button"
                style="@style/FormButton"
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:text="@string/log_in"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgot_password"
                tools:enabled="false" />

            <Button
                android:id="@+id/skip_login"
                style="@style/TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:drawableEnd="@drawable/ic_arrow_forward_color_accent"
                android:drawablePadding="10dp"
                android:onClick="skipLogin"
                android:text="@string/continue_as_guest"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/google_sign_in" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:contentDescription="@string/brand_logo"
                android:scaleType="fitCenter"
                android:src="@drawable/logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleSmallInverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/sign_in_button"
                app:layout_constraintEnd_toEndOf="@+id/sign_in_button"
                app:layout_constraintHorizontal_bias="0.7"
                app:layout_constraintStart_toStartOf="@+id/sign_in_button"
                app:layout_constraintTop_toTopOf="@+id/sign_in_button"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/welcome_back"
                android:textColor="#001F52"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo" />

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/please_log_into_your_account"
                android:textColor="@color/app_gray"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcome" />

            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/or"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/divider1"
                app:layout_constraintEnd_toStartOf="@id/divider2"
                app:layout_constraintStart_toEndOf="@+id/divider1"
                app:layout_constraintTop_toTopOf="@id/divider1" />


            <View
                android:id="@+id/divider1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:background="@color/divider_color"
                app:layout_constraintEnd_toStartOf="@+id/or"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

            <View
                android:id="@+id/divider2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/divider_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/or"
                app:layout_constraintTop_toTopOf="@+id/divider1" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/or" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_layout"
                style="@style/FormTextInputLayout"
                android:layout_width="match_parent"
                android:layout_marginTop="60dp"
                android:hint="@string/username"
                app:layout_constraintTop_toBottomOf="@+id/login">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/FormEditText"
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordVisible"
                style="@style/FormTextInputLayout"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:hint="@string/password"
                app:layout_constraintTop_toBottomOf="@+id/username_layout">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/FormEditText"
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
